cmake_minimum_required(VERSION 3.22)
project(aoc2025)

set(CMAKE_CXX_STANDARD 23)
string(APPEND CMAKE_CXX_FLAGS " -Werror")
string(APPEND CMAKE_CXX_FLAGS_RELEASE " -O3 -march=native")

add_executable(aoc2025
        01.cpp
#        02.cpp
#        03.cpp
#        04.cpp
#        05.cpp
#        06.cpp
#        07.cpp
#        08.cpp
#        09.cpp
#        10.cpp
#        11.cpp
#        12.cpp
#        13.cpp
#        14.cpp
#        15.cpp
#        16.cpp
#        17.cpp
#        18.cpp
#        19.cpp
#        20.cpp
#        21.cpp
#        22.cpp
#        23.cpp
#        24.cpp
#        25.cpp
        )
